--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: clojure
 lein: lein2
+services:
+  - rabbitmq
+before_script: ./bin/ci/before_script.sh
 script: lein2 all test
 jdk:
   - openjdk6
